Fix zoom, collapse

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,6 @@ body {
   background-image:image-url('background.png');
   background-repeat: no-repeat;
   background-position: top center;
-  background-size: cover;
 }
 .primary-navbar {
   border-radius: 0;
